# JSTPHaskell

./: .gitignore  JSRSTest.hs  JSTPHaskell.cabal  PackageTest.hs  Test.hs  calc1000.sh  example.json  example.jsrs  stack.yaml  test.hs  test.js
JSTP/: Colors.hs  JSRS.hs  JSRSShow.hs  Package.hs  ParserSettings.hs  ReqInfo.hs  ResInfo.hs  ShowSettings.hs
app/: Main.hs
myparser/: JSRS  JSRS.hs  JSRSParser.hs  Package.hs  Parser.hs  ParserSettings.hs  ShowSettings.hs  Test.hs  calc1000.sh  main.hs  res.html  test2.hs
src/JSTP/: Connection.hs  Errors.hs  JSRS.hs  Package.hs  Parser.hs  ParserSettings.hs  Show.hs  ShowSettings.hs
test/: Parser.hs  Spec.hs
