name:                JSTPHaskell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/JSTPHaskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     JSTP.JSRS, JSTP.Parser, 
                       JSTP.ParserSettings, JSTP.ShowSettings,
                       JSTP.Colors, JSTP.Errors
                       JSTP.ReqInfo, JSTP.Connection,
                       JSTP.Package, JSTP.ResInfo
  build-depends:       base >= 4.7 && < 5, 
                       deepseq >= 1.4 && < 1.5,
                       containers >= 0.5 && < 0.6,
                       bytestring >= 0.10 && < 0.11,
                       network-simple >= 0.4 && < 0.5,
                       network >= 2.6 && < 2.7,
                       stm >= 2.4 && < 2.5
  default-language:    Haskell2010

executable JSTPHaskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , JSTPHaskell
  default-language:    Haskell2010

test-suite JSTPHaskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , JSTPHaskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/DzyubSpirit/JSTPHaskellParser
